syntax = "proto3";

package api;

option go_package = ".;api";
import "google/api/annotations.proto";

message SNMPAddRequest {
    string name = 1;
    string address = 2;
    uint32 port = 3;
    string username = 4;
    string password = 5;
    string version = 6;
    string community = 7;
    string security_level = 8;
    string auth_protocol = 9;
    string priv_protocol = 10;
    string priv_password = 11;
    string context_name = 12;
}

message SNMPAddResponse {
    int32 id = 1;
}

service SNMP {
    rpc Add(SNMPAddRequest) returns (SNMPAddResponse) {
        option (google.api.http) = {
            post: "/v0/snmp"
            body: "*"
        };
    }
}
